Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -205,3 +205,80 @@
 </body>
 </html>
 
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pagamento - 1 Chance</title>
+  <style>
+    body {
+      background: #000;
+      color: #fff;
+      font-family: 'Arial Black', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      height: 100vh;
+      padding: 20px;
+    }
+
+    h1 {
+      font-size: 2em;
+      color: #ffd700;
+      text-shadow: 0 0 10px #ffd700, 0 0 20px #fff;
+      animation: pulse 1.5s infinite;
+    }
+
+    @keyframes pulse {
+      0% { text-shadow: 0 0 5px #fff, 0 0 10px #ffd700; }
+      50% { text-shadow: 0 0 20px #fff, 0 0 40px #ffd700; }
+      100% { text-shadow: 0 0 5px #fff, 0 0 10px #ffd700; }
+    }
+
+    .box {
+      background: #111;
+      border: 2px solid #ffd700;
+      border-radius: 12px;
+      padding: 20px;
+      margin-top: 20px;
+      width: 100%;
+      max-width: 500px;
+    }
+
+    .pix-code {
+      font-size: 0.9em;
+      background: #222;
+      padding: 10px;
+      border: 1px dashed #ffd700;
+      border-radius: 8px;
+      word-break: break-all;
+      margin-top: 10px;
+      user-select: all;
+    }
+
+    .obs {
+      font-size: 0.9em;
+      color: #aaa;
+      margin-top: 20px;
+    }
+  </style>
+</head>
+<body>
+  <h1>🎉 PARABÉNS! VOCÊ ESTÁ ADQUIRINDO<br>1 CHANCE 🎉</h1>
+
+  <div class="box">
+    <p>PARA COMEÇAR A TESTAR A SUA SORTE, COPIE O CÓDIGO ABAIXO E FAÇA O PAGAMENTO DE <strong>R$5,00</strong> VIA PIX:</p>
+    <div class="pix-code">
+      00020126580014BR.GOV.BCB.PIX013656c9f244-41a6-4728-aafe-5d8ca61569d452040000530398654045.005802BR5925David Fonsin Cavalcanti e6009SAO PAULO62140510edN3e4Wn05630410EA
+    </div>
+  </div>
+
+  <p class="obs">Após o pagamento ser confirmado, o site detectará automaticamente e liberará sua raspadinha!</p>
+</body>
+</html>
+
+
+
