Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1,284 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Raspadinha DSTREET</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: #111;
-      color: white;
-      font-family: 'Arial Black', sans-serif;
-      text-align: center;
-    }
-
-    .led-title {
-      font-size: 2.5em;
-      color: yellow;
-      text-shadow: 0 0 20px yellow, 0 0 40px yellow;
-      margin-top: 20px;
-    }
-
-    .blinking {
-      color: white;
-      font-size: 1.2em;
-      animation: blink 1s infinite alternate;
-      margin-top: 5px;
-      text-shadow: 0 0 5px #fff;
-    }
-
-    @keyframes blink {
-      0% { opacity: 1; }
-      100% { opacity: 0.2; }
-    }
-
-    .chances {
-      margin: 20px 0;
-      font-size: 1.5em;
-      font-weight: bold;
-      color: #00ffcc;
-      text-shadow: 0 0 10px #00ffcc;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(3, 100px);
-      gap: 10px;
-      justify-content: center;
-      margin: 20px auto;
-    }
-
-    .cell {
-      width: 100px;
-      height: 100px;
-      background-color: #222;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 2em;
-      cursor: pointer;
-      border: 2px solid #555;
-    }
-
-    .cell.revealed {
-      background-color: white;
-      color: red;
-    }
-
-    .result {
-      font-size: 1.5em;
-      margin: 15px 0;
-    }
-
-    .payment-buttons button, .next-button {
-      display: block;
-      margin: 10px auto;
-      padding: 15px 25px;
-      font-size: 1em;
-      font-weight: bold;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: 0.3s ease;
-    }
-
-    .payment-buttons button {
-      background-color: yellow;
-      border: none;
-    }
-
-    .next-button {
-      background-color: white;
-      color: black;
-      border: 2px solid #ddd;
-      box-shadow: 0 0 10px white;
-    }
-
-    .rules {
-      font-size: 1em;
-      margin-top: 20px;
-    }
-
-  </style>
-</head>
-<body>
-
-  <div class="led-title">DSTREET COMPANY</div>
-  <div class="blinking">ACHE 3 FIGURAS IGUAIS E LEVE 10 CAMISETAS STREETWEAR</div>
-
-  <div class="chances" id="chances">Chances restantes: 0</div>
-
-  <div class="grid" id="grid"></div>
-
-  <div class="result" id="resultText"></div>
-
-  <div class="payment-buttons">
-    <button onclick="comprar(1)">Pagar R$5,00 (1 chance)</button>
-    <button onclick="comprar(3)">Pagar R$10,00 (3 chances)</button>
-    <button onclick="comprar(6)">Pagar R$20,00 (6 chances)</button>
-  </div>
-
-  <button class="next-button" id="nextBtn" style="display:none;" onclick="novaTentativa()">PRÓXIMA TENTATIVA</button>
-
-  <div class="rules">
-    <p>❌❌❌ = TENTE OUTRA VEZ</p>
-    <p>👕👕👕 = 🎊GANHOU 10 CAMISETAS🎊</p>
-  </div>
-
-  <script>
-    let chances = 0;
-    let gridEl = document.getElementById('grid');
-    let resultText = document.getElementById('resultText');
-    let chancesEl = document.getElementById('chances');
-    let nextBtn = document.getElementById('nextBtn');
-
-    function comprar(qtd) {
-      chances += qtd;
-      atualizarChances();
-      if (chances > 0 && gridEl.innerHTML === '') {
-        gerarTabuleiro();
-      }
-    }
-
-    function atualizarChances() {
-      chancesEl.textContent = `Chances restantes: ${chances}`;
-    }
-
-    function gerarTabuleiro() {
-      gridEl.innerHTML = '';
-      resultText.textContent = '';
-      nextBtn.style.display = 'none';
-
-      let figuras = ['❌', '👕'];
-      let sorteio = Array.from({ length: 9 }, () =>
-        figuras[Math.floor(Math.random() * figuras.length)]
-      );
-
-      sorteio.forEach((figura, index) => {
-        let cell = document.createElement('div');
-        cell.className = 'cell';
-        cell.onclick = () => revelar(cell, figura);
-        gridEl.appendChild(cell);
-      });
-
-      gridEl.dataset.figuras = JSON.stringify(sorteio);
-    }
-
-    function revelar(cell, figura) {
-      if (cell.classList.contains('revealed') || chances === 0) return;
-
-      cell.classList.add('revealed');
-      cell.textContent = figura;
-
-      let reveladas = document.querySelectorAll('.cell.revealed');
-      if (reveladas.length === 3) {
-        chances--;
-        atualizarChances();
-
-        let valores = [...reveladas].map(c => c.textContent);
-        let ganhou = valores.every(v => v === valores[0]);
-
-        setTimeout(() => {
-          if (ganhou && valores[0] === '👕') {
-            resultText.innerHTML = '🎊 GANHOU 10 CAMISETAS 🎊';
-          } else {
-            resultText.innerHTML = '<span style="color:limegreen;">Tente novamente!</span>';
-          }
-
-          if (chances > 0) {
-            nextBtn.style.display = 'block';
-          }
-        }, 400);
-      }
-    }
-
-    function novaTentativa() {
-      gridEl.innerHTML = '';
-      resultText.textContent = '';
-      nextBtn.style.display = 'none';
-      setTimeout(() => {
-        gerarTabuleiro();
-      }, 100); // curto delay pra sumir visualmente
-    }
-  </script>
-
-</body>
-</html>
-
-<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pagamento - 1 Chance</title>
-  <style>
-    body {
-      background: #000;
-      color: #fff;
-      font-family: 'Arial Black', sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      height: 100vh;
-      padding: 20px;
-    }
-
-    h1 {
-      font-size: 2em;
-      color: #ffd700;
-      text-shadow: 0 0 10px #ffd700, 0 0 20px #fff;
-      animation: pulse 1.5s infinite;
-    }
-
-    @keyframes pulse {
-      0% { text-shadow: 0 0 5px #fff, 0 0 10px #ffd700; }
-      50% { text-shadow: 0 0 20px #fff, 0 0 40px #ffd700; }
-      100% { text-shadow: 0 0 5px #fff, 0 0 10px #ffd700; }
-    }
-
-    .box {
-      background: #111;
-      border: 2px solid #ffd700;
-      border-radius: 12px;
-      padding: 20px;
-      margin-top: 20px;
-      width: 100%;
-      max-width: 500px;
-    }
-
-    .pix-code {
-      font-size: 0.9em;
-      background: #222;
-      padding: 10px;
-      border: 1px dashed #ffd700;
-      border-radius: 8px;
-      word-break: break-all;
-      margin-top: 10px;
-      user-select: all;
-    }
-
-    .obs {
-      font-size: 0.9em;
-      color: #aaa;
-      margin-top: 20px;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>DStreet Raspadinha</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🎉 PARABÉNS! VOCÊ ESTÁ ADQUIRINDO<br>1 CHANCE 🎉</h1>
-
-  <div class="box">
-    <p>PARA COMEÇAR A TESTAR A SUA SORTE, COPIE O CÓDIGO ABAIXO E FAÇA O PAGAMENTO DE <strong>R$5,00</strong> VIA PIX:</p>
-    <div class="pix-code">
-      00020126580014BR.GOV.BCB.PIX013656c9f244-41a6-4728-aafe-5d8ca61569d452040000530398654045.005802BR5925David Fonsin Cavalcanti e6009SAO PAULO62140510edN3e4Wn05630410EA
-    </div>
+  <div class="container">
+    <h1>RASPADINHA DStreet</h1>
+    <p><strong>Regras:</strong> <br> R$5,00 = 1 chance</p>
+    <button onclick="window.location.href='checkout.html'">COMPRAR 1 CHANCE - R$5</button>
   </div>
-
-  <p class="obs">Após o pagamento ser confirmado, o site detectará automaticamente e liberará sua raspadinha!</p>
 </body>
 </html>
-
-
-
